# comp777_code

./: .gitignore  README.md  always_convert_svgs.script  convert_svgs.script  requirements.txt  setup.cfg  setup.py
chapter1_pytorch/: ch1_autodiff_mysteries.py  numpy_lap_test.py  optimize_laplacian.py  optimize_quadratic_function.py  optimize_quadratic_function_simplified.py
hw/hw1/: get_images.py
src/comp777_code/: finite_differences.py  optimize_fcn.py
src/utils/: optimize_fcn.py
