[metadata]
name = comp777_code
version = 1.0.0
author = Marc Niethammer
author_email = mn@cs.unc.edu
description = Example codes for COMP 777
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uncbiag/comp777_code
project_urls =
    Bug Tracker = https://github.com/uncbiag/comp777_code/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

install_requires =
    torch
    torchvision
    tensorboard
    holoviews
    tqdm
    matplotlib
    numpy
    black
    isort
    flake8
    bokeh

[options.packages.find]
where = src

